--- a/src/main/javascript/angular-apishore/directives/media/file-upload.html
+++ b/src/main/javascript/angular-apishore/directives/media/file-upload.html
@@ -3,13 +3,8 @@
      flow-file-added="added=true;true"
      flow-files-submitted="fileUploadSubmit($file, $event, $flow)"
      flow-file-success="uploaded($file, $message)">
-		<div class="file-upload-preview">
-			<div class="file-upload-preview-actions">
-				<div class="btn-group-vertical">
-				    <button type="button" class="btn btn-sm btn-primary" flow-btn flow-attrs="{accept:'*/*'}">Upload</button>
-				</div>
-			</div>
-			<div class="file-upload-preview-image">
+		<div class="as-file-upload-preview">
+			<div class="aas-file-upload-preview-image">
 				<span ng-hide="model">Please upload the file</span>
 				<b ng-show="model" ng-bind="filename"></b>
 				<br>
@@ -18,6 +13,10 @@
 			        <small class="error" ng-show="formField.$error.required">Image is required</small>
 					<small class="error" ng-repeat="(key, message) in formField.$error.server">{{message}}</small>
 			    </div>
+			</div>
+			<div class="file-upload-preview-actions">
+				    <button type="as-button" class="btn btn-sm btn-primary" flow-btn flow-attrs="{accept:'*/*'}">Upload</button>
+				</div>
 			</div>
 		</div>
 	</div>
